--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2374,7 +2374,25 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.hero.custom {
+  position: relative;
+}
+.hero.custom::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  background-color: #000;
+}
+.hero.custom .hero__text p {
+  max-width: 790px;
+}
 .hero__text {
+  z-index: 100;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
