--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -14,10 +14,29 @@
     background-image: url(../../assets/imgs/invite-hero.png);
     background-repeat: no-repeat;
     background-size: cover;
-
+    &.custom {
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            opacity: .5;
+            background-color: #000;
+        }
+        .hero__text {
+            p {
+                max-width: 790px;
+            }
+        }
+    }
     // .hero__text
 
     &__text {
+        z-index: 100;
+        position: relative;
         display: flex;
         flex-direction: column;
         align-items: center;
